# decarbify.rl

./: .gitignore  .gitmodules  README.md  app.py  design_guideline.md  main.py  pyproject.toml  requirements-api.txt  requirements.txt  test_simulator.py
backend/: PLAN_INFERENCE_PIPELINE.md  api.py  inference_engine.py  mock_data.py  performance_tracker.py  simulator.py  test_pipeline.py
backend/.ipynb_checkpoints/: carbon_api-checkpoint.py
frontend/: .env.development  .env.mock  index.html  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts
frontend/src/components/charts/: SlidingCO2Chart.tsx
frontend/src/components/layout/: Header.tsx  RightPanel.tsx  Sidebar.tsx
frontend/src/components/map/: GlobalMap.tsx
frontend/src/components/ui/: LoadingSpinner.tsx
frontend/src/components/widgets/: ActionProbHeatmap.tsx
frontend/src/constants/: index.ts
frontend/src/hooks/: usePlayback.ts
frontend/src/store/: useSimStore.ts
frontend/src/types/: index.ts
frontend/src/utils/: dataHelpers.ts
llm_stuff/: llm_results.json  llm_results_combined.json  llm_results_gpt-4o-mini.json  llm_results_gpt-4o.json  llm_scheduler.py  openpkl.py
