[project]
name = "hackeurope"
version = "0.1.0"
description = "GreenDispatch — Carbon-Aware AI Workload Scheduler"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  # API layer
  "fastapi==0.115.5",
  "uvicorn[standard]==0.32.1",
  "pydantic==2.9.2",
  # Data
  "pandas==2.3.3",
  "numpy==2.4.2",
  "PyYAML==6.0.3",
  # Networking
  "requests==2.32.5",
  # ML / RL
  "torch==2.10.0",
  "gymnasium==1.2.3",
  "cloudpickle==3.1.2",
  # Viz (kept for legacy Streamlit app)
  "streamlit==1.45.1",
  "plotly==6.1.1",
  "pydeck==0.9.1",
  "matplotlib==3.10.3",
  "seaborn==0.13.2",
  "tqdm==4.67.1",
]
